kubernetes/reddit/ui-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - 84.252.129.135.sslip.io
    secretName: ui-ingress
  rules:
    - host: 84.252.129.135.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: ui
              servicePort: 9292
