kubernetes/reddit/reddit-network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: dev
  labels:
    app: reddit
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-mongo
  namespace: dev
  labels:
    app: reddit
spec:
  podSelector:
    matchLabels:
      app: reddit
      component: mongo
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: reddit
            component: post
      - podSelector:
          matchLabels:
            app: reddit
            component: comment

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-ui
  namespace: dev
  labels:
    app: reddit
spec:
  podSelector:
    matchLabels:
      app: reddit
      component: ui
  policyTypes:
  - Ingress
  ingress:
    - from:
      - ipBlock:
          cidr: 0.0.0.0/0

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-post
  namespace: dev
  labels:
    app: reddit
spec:
  podSelector:
    matchLabels:
      app: reddit
      component: post
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: reddit
            component: ui

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-comment
  namespace: dev
  labels:
    app: reddit
spec:
  podSelector:
    matchLabels:
      app: reddit
      component: comment
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: reddit
            component: ui
